--- a/in-linked-backend/package.json
+++ b/in-linked-backend/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "typescript-node",
-  "version": "2.0.0",
-  "description": "TypeScript template for backend applications.",
+  "name": "InLinked-Backend",
+  "version": "0.0.1",
+  "description": "Backend for InLinked project",
   "license": "MIT",
   "repository": {
-    "url": "https://github.com/Talento90/typescript-node.git"
+    "url": "https://github.com/swuleung/SJS"
   },
-  "author": "Talento90",
+  "author": "SJS",
   "keywords": [
     "typescript",
     "nodejs",
@@ -17,11 +17,8 @@
     "build:watch": "rm -rf dist && tsc -w",
     "coverage": "nyc --exclude dist/test --reporter=html npm run test:all",
     "lint": "tslint 'src/**/*.ts' 'test/**/*.test.ts'",
-    "start": "node dist/src/index.js",
-    "start:dev": "tsc-watch --onSuccess 'node --inspect=0.0.0.0:5858 dist/src/index.js'",
-    "test": "npm run build && mocha --exit --recursive dist/test/unit",
-    "test:integration": "npm run build && mocha --exit --recursive dist/test/integration",
-    "test:all": "npm run build && mocha --exit --recursive dist/test",
+    "start": "node dist/server.js",
+    "start:dev": "tsc-watch --onSuccess 'node --inspect=0.0.0.0:5858 dist/server.js'",
     "clean": "rm -rf node_modules",
     "reinstall": "npm run clean && npm install"
   },
