--- a/in-linked-backend/package.json
+++ b/in-linked-backend/package.json
@@ -44,6 +44,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
+    "http-status-codes": "^1.3.0",
     "husky": "^0.15.0-rc.13",
     "mocha": "^5.0.5",
     "morgan": "^1.9.1",
