--- a/in-linked-backend/package.json
+++ b/in-linked-backend/package.json
@@ -13,7 +13,8 @@
     "backend"
   ],
   "scripts": {
-    "build": "rm -rf dist && tsc",
+    "build": "Remove-Item .\\dist -Force -Recurse && tsc",
+    "debug": "npm build && npm start",
     "build:watch": "rm -rf dist && tsc -w",
     "coverage": "nyc --exclude dist/test --reporter=html npm run test:all",
     "lint": "tslint 'src/**/*.ts' 'test/**/*.test.ts'",
@@ -25,6 +26,7 @@
   "dependencies": {
     "async": "^2.6.0",
     "bcryptjs": "^2.4.3",
+    "http-status-codes": "^1.3.0",
     "joi": "^13.1.2",
     "jsonwebtoken": "^8.2.0",
     "knex": "^0.14.4",
@@ -44,7 +46,6 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "helmet": "^3.14.0",
-    "http-status-codes": "^1.3.0",
     "husky": "^0.15.0-rc.13",
     "mocha": "^5.0.5",
     "morgan": "^1.9.1",
