feat(types): Added type definition for using json files in source

--- a/in-linked-backend/tsconfig.json
+++ b/in-linked-backend/tsconfig.json
@@ -7,7 +7,8 @@
       "noUnusedLocals": false,
       "noUnusedParameters": false,
       "typeRoots": [
-        "node_modules/@types"
+        "node_modules/@types",
+        "utils/types/json.d.ts"
       ]
     },
     "include": [
