--- a/in-linked/package.json
+++ b/in-linked/package.json
@@ -20,9 +20,9 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@auth0/angular-jwt": "^2.0.0",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
-    "jsonwebtoken": "^8.4.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
